Peter Hook v0.2.0: Complete hierarchical git hooks manager for monorepos
OVERVIEW
========
Peter Hook is a production-ready git hooks manager designed for monorepos with
intelligent parallel execution, file-based targeting, and advanced workflow features.
It enables different paths within a monorepo to have custom hooks while maintaining
repository-wide quality standards and performance optimization.

CORE ARCHITECTURE
=================

Configuration System (src/config/):
- parser.rs: TOML configuration parsing with comprehensive validation
- templating.rs: Environment variable templating with dynamic path resolution
- Supports hierarchical configs where nearest hooks.toml wins
- Backward compatibility for legacy configurations

Hook System (src/hooks/):
- resolver.rs: Hierarchical hook resolution with file pattern filtering
- executor.rs: Thread-safe parallel execution engine with safety guarantees
- dependencies.rs: Topological sorting for hook dependency resolution
- Safe parallel execution: read-only hooks concurrent, modifying hooks sequential

Git Integration (src/git/):
- repository.rs: Git repository detection (standard repos, worktrees, submodules)
- installer.rs: Complete git hook installation/management with backup safety
- changes.rs: Git diff parsing for intelligent file change detection
- Supports 15+ git hook events with proper argument passing

Output System (src/output/):
- TTY detection for rich interactive vs clean CI output
- Progress bars and colored output for terminals
- Clean, parseable output for scripts and automation
- Professional error reporting and diagnostics

CLI Interface (src/cli/):
- Comprehensive command-line interface with multiple execution modes
- File-based filtering, hook simulation, installation management
- Git hook lifecycle commands (install/uninstall/list)

ADVANCED FEATURES
================

File Pattern Targeting:
- Glob pattern matching for selective hook execution
- Git diff integration for change detection
- 5-10x 

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -70,7 +70,7 @@ body:
     id: version
     attributes:
       label: Version
-      description: What version of git-hook-manager are you using?
+      description: What version of peter-hook are you using?
       placeholder: "v0.1.0 or commit hash"
     validations:
       required: true
