--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,9 +176,9 @@ jobs:
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: git-hook-manager-${{ matrix.target }}
+          name: peter-hook-${{ matrix.target }}
           path: |
-            target/${{ matrix.target }}/release/git-hook-manager${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+            target/${{ matrix.target }}/release/peter-hook${{ matrix.os == 'windows-latest' && '.exe' || '' }}
 
   integration-test:
     name: Integration Tests
@@ -191,23 +191,23 @@ jobs:
       - name: Download Linux binary
         uses: actions/download-artifact@v4
         with:
-          name: git-hook-manager-x86_64-unknown-linux-gnu
+          name: peter-hook-x86_64-unknown-linux-gnu
           path: ./bin
 
       - name: Make binary executable
-        run: chmod +x ./bin/git-hook-manager
+        run: chmod +x ./bin/peter-hook
 
       - name: Test binary execution
         run: |
-          ./bin/git-hook-manager --help
-          ./bin/git-hook-manager validate
+          ./bin/peter-hook --help
+          ./bin/peter-hook validate
 
       - name: Test hook execution with sample config
         run: |
           echo '[hooks.test]' > test-hooks.toml
           echo 'command = "echo test successful"' >> test-hooks.toml
           echo 'description = "Test hook"' >> test-hooks.toml
-          ./bin/git-hook-manager run test
+          ./bin/peter-hook run test
 
       - name: Test hierarchical config resolution
         run: |
@@ -217,5 +217,5 @@ jobs:
           echo '[hooks.child]' > project/subdir/hooks.toml  
           echo 'command = "echo child hook"' >> project/subdir/hooks.toml
           cd project/subdir
-          ../../bin/git-hook-manager run child
-          ../../bin/git-hook-manager validate
+          ../../bin/peter-hook run child
+          ../../bin/peter-hook validate
