--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "git-hook-manager"
-version = "0.1.0"
+name = "peter-hook"
+version = "0.2.0"
 edition = "2021"
-authors = ["Git Hook Manager Contributors"]
+authors = ["Peter Hook Contributors"]
 description = "A hierarchical git hooks manager for monorepos"
 license = "MIT"
-repository = "https://github.com/example/git-hook-manager"
+repository = "https://github.com/example/peter-hook"
 keywords = ["git", "hooks", "monorepo", "development", "cli"]
 categories = ["development-tools", "command-line-utilities"]
 
@@ -15,6 +15,11 @@ toml = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.5"
 anyhow = "1.0"
+glob = "0.3"
+atty = "0.2"
+once_cell = "1.20"
+indicatif = "0.17"
+console = "0.15"
 
 [dev-dependencies]
 tempfile = "3.13"
