Fix release pipeline changelog generation
- Replace problematic heredoc with direct environment variable assignment
- Fixes GitHub Actions output formatting error
- Enables successful release creation for tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,18 +33,14 @@ jobs:
           PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
           
           if [ -n "$PREV_TAG" ]; then
-            echo "## Changes since $PREV_TAG" > CHANGELOG.md
-            echo "" >> CHANGELOG.md
-            git log --pretty=format:"- %s (%h)" $PREV_TAG..HEAD >> CHANGELOG.md
+            CHANGELOG="## Changes since $PREV_TAG"$'\n\n'
+            CHANGELOG+=$(git log --pretty=format:"- %s (%h)" $PREV_TAG..HEAD)
           else
-            echo "## Initial Release" > CHANGELOG.md
-            echo "" >> CHANGELOG.md
-            echo "First release of peter-hook - A hierarchical git hooks manager for monorepos." >> CHANGELOG.md
+            CHANGELOG="## Initial Release"$'\n\n'"First release of peter-hook - A hierarchical git hooks manager for monorepos."
           fi
           
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          # Use environment file instead of heredoc
+          echo "changelog=${CHANGELOG}" >> $GITHUB_OUTPUT
 
       - name: Create Release
         id: create_release
