Fix release workflow to use matrix strategy for multiple targets
- Use matrix strategy instead of comma-separated targets
- Each target runs as separate job with taiki-e action
- Follows documented best practices for multiple platform builds

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,14 @@ permissions:
 
 jobs:
   release:
+    strategy:
+      matrix:
+        include:
+          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-apple-darwin
+          - target: aarch64-apple-darwin
+          - target: x86_64-pc-windows-msvc
+          - target: aarch64-unknown-linux-gnu
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,8 +25,8 @@ jobs:
         with:
           # Binary name (matches the name in Cargo.toml)
           bin: peter-hook
-          # Target platforms for cross-compilation
-          target: x86_64-unknown-linux-gnu,x86_64-apple-darwin,aarch64-apple-darwin,x86_64-pc-windows-msvc,aarch64-unknown-linux-gnu
+          # Target platform (one per matrix job)
+          target: ${{ matrix.target }}
           # Include additional files in the release archive
           include: LICENSE,README.md,CLAUDE.md,examples
         env:
