--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.7"
 edition = "2021"
 authors = ["Peter Hook Contributors"]
 description = "A hierarchical git hooks manager for monorepos"
-license = "MIT"
+license = "CC0-1.0"
 repository = "https://github.com/example/peter-hook"
 keywords = ["git", "hooks", "monorepo", "development", "cli"]
 categories = ["development-tools", "command-line-utilities"]
