--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ atty = "0.2"
 once_cell = "1.20"
 indicatif = "0.17"
 console = "0.15"
+git2 = { version = "0.19", default-features = false }
 
 [dev-dependencies]
 tempfile = "3.13"
