--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,14 @@ toml = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.5"
 anyhow = "1.0"
-glob = "0.3"
-atty = "0.2"
-once_cell = "1.20"
-indicatif = "0.17"
-console = "0.15"
-git2 = { version = "0.19", default-features = false }
+ glob = "0.3"
+ atty = "0.2"
+ once_cell = "1.20"
+ indicatif = "0.17"
+ console = "0.15"
+ git2 = { version = "0.19", default-features = false }
+ serde_json = "1.0"
+
 
 [dev-dependencies]
 tempfile = "3.13"
