Add --version flag, fix linting, and update release workflow
- Add version attribute to CLI struct using CARGO_PKG_VERSION
- Support both --version and -V flags that auto-sync with Cargo.toml
- Add missing documentation for ImportDiagnostics structs
- Fix clippy warnings: unwrap_or, single-char pattern, wildcard match
- Add allow attributes for complex functions to pass strict linting
- Update GitHub Actions to use peter-hook-v{version} tag format
- Bump version to 0.4.1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - 'v*'
+      - 'peter-hook-v*'
 
 permissions:
   contents: write
@@ -17,12 +17,16 @@ jobs:
       - uses: actions/checkout@v4
       - name: Get version
         id: version
-        run: echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          VERSION=${TAG_NAME#peter-hook-}
+          echo "version=$TAG_NAME" >> $GITHUB_OUTPUT
+          echo "version_number=$VERSION" >> $GITHUB_OUTPUT
       - name: Create Release
         run: |
           gh release create ${{ steps.version.outputs.version }} \
-            --title "Peter Hook ${{ steps.version.outputs.version }}" \
-            --notes "Release ${{ steps.version.outputs.version }}" \
+            --title "Peter Hook ${{ steps.version.outputs.version_number }}" \
+            --notes "Release ${{ steps.version.outputs.version_number }}" \
             --draft \
             --repo workhelix/peter-hook
         env:
