--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,17 +58,10 @@ jobs:
           target: ${{ matrix.target }}
           # Include additional files in the release archive
           include: LICENSE,README.md,CLAUDE.md,examples
+          # Use zip compression for all platforms
+          tar: none
+          tar-xz: none
+          zip: all
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  publish-release:
-    needs: [create-release, build-and-upload]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Publish Release
-        run: |
-          gh release edit ${{ needs.create-release.outputs.version }} \
-            --draft=false \
-            --repo workhelix/peter-hook
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
