--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "peter-hook"
-version = "2.2.2"
+version = "3.0.0"
 edition = "2021"
 authors = ["Peter Hook Contributors"]
 description = "A hierarchical git hooks manager for monorepos"
@@ -20,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
  console = "0.15"
  git2 = { version = "0.19", default-features = false }
  serde_json = "1.0"
+ dirs = "5.0"
+ shellexpand = "3.1"
 
 
 
