Upgrade to Rust 2024 edition and fix release infrastructure
- Upgrade to Rust edition 2024 with MSRV 1.85.0
- Update CI/CD workflows for new MSRV compatibility
- Fix release workflow: remove draft flag, add auto-generated notes
- Add SHA256 checksum generation for release binaries
- Replace unsafe env var tests with safe alternatives
- Update clippy suggestions: map_or -> is_none_or, LazyLock migration
- Bump version to 1.0.6

Fixes release automation issues and improves security verification
for install scripts through checksums.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,7 @@ jobs:
         run: |
           gh release create ${{ steps.version.outputs.version }} \
             --title "Peter Hook ${{ steps.version.outputs.version_number }}" \
-            --notes "Release ${{ steps.version.outputs.version_number }}" \
-            --draft \
+            --generate-notes \
             --repo workhelix/peter-hook
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -62,6 +61,8 @@ jobs:
           tar: none
           tar-xz: none
           zip: all
+          # Generate SHA256 checksums
+          checksum: sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
