--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "peter-hook"
-version = "1.0.5"
-edition = "2021"
+version = "1.0.6"
+edition = "2024"
+rust-version = "1.85.0"
 authors = ["Peter Hook Contributors"]
 description = "A hierarchical git hooks manager for monorepos"
 license = "MIT"
